tests/snapshots/integration_tests__detectors@reentrancy_events.cairo.snap
---
source: tests/integration_tests.rs
expression: results
input_file: tests/detectors/reentrancy_events.cairo
---
[
    Result {
        impact: Low,
        name: "reentrancy-events",
        confidence: Medium,
        message: "Reentrancy in reentrancy_events::reentrancy_events::TestContract::__wrapper__bad1\n\tExternal call to reentrancy_events::reentrancy_events::IAnotherContractDispatcherImpl::foo done in reentrancy_events::reentrancy_events::TestContract::bad1\n\tEvent emitted after the call by reentrancy_events::reentrancy_events::TestContract::ContractStateEventEmitter::emit in reentrancy_events::reentrancy_events::TestContract::bad1.",
    },
    Result {
        impact: Low,
        name: "reentrancy-events",
        confidence: Medium,
        message: "Reentrancy in reentrancy_events::reentrancy_events::TestContract::__wrapper__bad2_emit_between_calls\n\tExternal call to reentrancy_events::reentrancy_events::IAnotherContractDispatcherImpl::foo (1st occurrence) done in reentrancy_events::reentrancy_events::TestContract::bad2_emit_between_calls\n\tEvent emitted after the call by reentrancy_events::reentrancy_events::TestContract::ContractStateEventEmitter::emit in reentrancy_events::reentrancy_events::TestContract::bad2_emit_between_calls.",
    },
]
