tests/snapshots/integration_tests__detectors@unchecked_l1_handler_from.cairo.snap
---
source: tests/integration_tests.rs
assertion_line: 23
expression: results
input_file: tests/detectors/unchecked_l1_handler_from.cairo
---
[
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function unchecked_l1_handler_from::unchecked_l1_handler_from::UncheckedL1HandlerFrom::__wrapper__bad uses the felt252 operation felt252_add([33], [34]) -> ([35]) with the user-controlled parameters: [33], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function unchecked_l1_handler_from::unchecked_l1_handler_from::UncheckedL1HandlerFrom::__wrapper__good3 uses the felt252 operation felt252_add([41], [42]) -> ([43]) with the user-controlled parameters: [41], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function unchecked_l1_handler_from::unchecked_l1_handler_from::UncheckedL1HandlerFrom::check_recursive uses the felt252 operation felt252_add([3], [27]) -> ([28]), which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function unchecked_l1_handler_from::unchecked_l1_handler_from::UncheckedL1HandlerFrom::check_recursive uses the felt252 operation felt252_sub([10], [9]) -> ([11]), which is not overflow/underflow safe",
    },
    Result {
        impact: Low,
        name: "use-after-pop-front",
        confidence: Medium,
        message: "The span [9] is used after removing elements from it in the function unchecked_l1_handler_from::unchecked_l1_handler_from::UncheckedL1HandlerFrom::__wrapper__good3",
    },
]
