tests/snapshots/integration_tests__detectors@unchecked_transfer.cairo.snap
---
source: tests/integration_tests.rs
assertion_line: 23
expression: results
input_file: tests/detectors/unchecked_transfer.cairo
---
[
    Result {
        impact: High,
        name: "unchecked-transfer",
        confidence: Medium,
        message: "The return value of the ERC20 transfer call to unchecked_transfer::unchecked_transfer::IERC20DispatcherImpl::transfer is never checked in unchecked_transfer::unchecked_transfer::UncheckedTransfer::bad_transfer",
    },
    Result {
        impact: High,
        name: "unchecked-transfer",
        confidence: Medium,
        message: "The return value of the ERC20 transfer call to unchecked_transfer::unchecked_transfer::IERC20DispatcherImpl::transferFrom is never checked in unchecked_transfer::unchecked_transfer::UncheckedTransfer::bad_transfer_from_camel",
    },
    Result {
        impact: High,
        name: "unchecked-transfer",
        confidence: Medium,
        message: "The return value of the ERC20 transfer call to unchecked_transfer::unchecked_transfer::IERC20DispatcherImpl::transfer_from is never checked in unchecked_transfer::unchecked_transfer::UncheckedTransfer::bad_transfer_from",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call to unchecked_transfer::unchecked_transfer::IERC20DispatcherImpl::transfer in unchecked_transfer::unchecked_transfer::UncheckedTransfer::bad_transfer",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call to unchecked_transfer::unchecked_transfer::IERC20DispatcherImpl::transferFrom in unchecked_transfer::unchecked_transfer::UncheckedTransfer::bad_transfer_from_camel",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call to unchecked_transfer::unchecked_transfer::IERC20DispatcherImpl::transfer_from in unchecked_transfer::unchecked_transfer::UncheckedTransfer::bad_transfer_from",
    },
]
