tests/snapshots/integration_tests__detectors@unprotected_replace_class.cairo.snap
---
source: tests/integration_tests.rs
assertion_line: 23
expression: results
input_file: tests/detectors/unprotected_replace_class.cairo
---
[
    Result {
        impact: High,
        name: "unprotected-replace-class",
        confidence: Low,
        message: "The external function unprotected_replace_class::unprotected_replace_class::UnprotectedReplaceClass::__wrapper__bad_upgrade (unprotected_replace_class.cairo:15) can replace the contract class without a caller address check",
    },
    Result {
        impact: High,
        name: "unprotected-replace-class",
        confidence: Low,
        message: "The external function unprotected_replace_class::unprotected_replace_class::UnprotectedReplaceClass::__wrapper__bad_upgrade_indirect (unprotected_replace_class.cairo:23) can replace the contract class without a caller address check",
    },
]
