tests/snapshots/integration_tests__detectors@unused_events.cairo.snap
---
source: tests/integration_tests.rs
assertion_line: 23
expression: results
input_file: tests/detectors/unused_events.cairo
---
[
    Result {
        impact: Low,
        name: "use-after-pop-front",
        confidence: Medium,
        message: "The spans [9, 16] are used after removing elements from them in the function unused_events::unused_events::UnusedEvents::__wrapper__use_event1",
    },
]
