tests/snapshots/integration_tests__detectors@unused_return.cairo.snap
---
source: tests/integration_tests.rs
assertion_line: 23
expression: results
input_file: tests/detectors/unused_return.cairo
---
[
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function unused_return::unused_return::UnusedReturn::f_5 uses the felt252 operation core::Felt252Mul::mul, which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function unused_return::unused_return::UnusedReturn::f_6 uses the felt252 operation core::Felt252Add::add with the user-controlled operands: 1st, which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function unused_return::unused_return::UnusedReturn::f_6 uses the felt252 operation core::Felt252Mul::mul with the user-controlled operands: 1st,2nd, which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function unused_return::unused_return::UnusedReturn::f_7 uses the felt252 operation core::Felt252Add::add with the user-controlled operands: 1st, which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function unused_return::unused_return::UnusedReturn::f_7 uses the felt252 operation core::Felt252Mul::mul (1st occurrence) with the user-controlled operands: 1st,2nd, which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function unused_return::unused_return::UnusedReturn::f_7 uses the felt252 operation core::Felt252Mul::mul (2nd occurrence) with the user-controlled operands: 1st,2nd, which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function unused_return::unused_return::UnusedReturn::no_report4 uses the felt252 operation core::Felt252Add::add with the user-controlled operands: 1st,2nd, which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call to unused_return::unused_return::UnusedReturn::f_1 in unused_return::unused_return::UnusedReturn::unused_return_1",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call to unused_return::unused_return::UnusedReturn::f_2 in unused_return::unused_return::UnusedReturn::unused_return_2",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call to unused_return::unused_return::UnusedReturn::f_3 in unused_return::unused_return::UnusedReturn::unused_return_3",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call to unused_return::unused_return::UnusedReturn::f_4 in unused_return::unused_return::UnusedReturn::unused_return_4",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call to unused_return::unused_return::UnusedReturn::f_5 in unused_return::unused_return::UnusedReturn::unused_return_5",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call to unused_return::unused_return::UnusedReturn::f_6 in unused_return::unused_return::UnusedReturn::unused_return_6",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call to unused_return::unused_return::UnusedReturn::f_7 in unused_return::unused_return::UnusedReturn::unused_return_7",
    },
]
